--- a/_posts/2021-06-21-nft-la-gi.md
+++ b/_posts/2021-06-21-nft-la-gi.md
@@ -3,7 +3,7 @@ layout: post
 title:  "NFT là gì, kiến thức cơ bản về NFT cần biết."
 author: sal
 categories: [ Lifestyle ]
-image: assets/images/1.jpg
+image: assets/images/nft.png
 ---
 Khái niệm NFT được nhắc đến rất nhiều gần đây, tuy nhiên không phải ai cũng hiểu về nó. Đọc các bài viết được dịch trên mạng cũng rất khó hiểu do đó hôm nay Phố Bitcoin sẽ viết một bài trình bày đơn giản dễ hiểu để ai cũng có thể nắm được.
 
